# california_housing_prices

./: .gitignore  0.1-ch_data_exploration.ipynb  0.2-ch_stream-lined_workflow.ipynb  0.2-ch_streamlined_workflow.ipynb  Dockerfile  Makefile  README.md  conda  docker-compose.yml  environment.yml  my_model.pkl  old_environment.yml  pyproject.toml  setup.py
docs/: 0.1-ch_data_exploration.ipynb  0.2-ch_streamlined_workflow.ipynb  Makefile  README.md  commands.rst  conf.py  index.rst  make.bat  modules.rst
docs/_autosummary/: features.build_features.rst
models/: full_pipeline.pkl
notebooks/: Untitled.ipynb
src/: __init__.py
src/data/: foo.py  helpers.py  make_dataset.py  raw_unpack.py
src/features/: build_features.py
src/models/: cost_estimator.py  predict_model.py  train_model.py
src/tests/: test_raw_unpack.py
