[tool.poetry]
name = "california_housing_prices"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.0"
jupyter = "^1.0.0"
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.3.2"
pytest = "^6.0.1"
coverage = "^5.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
